--- a/scripts/create-deb/control
+++ b/scripts/create-deb/control
@@ -1,7 +1,7 @@
 Package: 
 Version: 1.0.0
 Date: 2022
-Maintainer: singhpro90
+Maintainer: u4user0 
 Homepage: none
 Architecture: all
 Essential: no
